--- a/individual/about/style.css
+++ b/individual/about/style.css
@@ -44,7 +44,6 @@ html{
     transition: color 0.3s ease;
     margin-left:15px;
 }
-
 #contactlink{
     margin-right:70px;
 }
@@ -52,7 +51,9 @@ html{
     border-bottom:1.5px solid #232323;
     padding-bottom:5px; 
 }
+
 .navbar .navbar-nav li a:hover{
+    color:;
     border-bottom:1.5px solid #232323;
     padding-bottom:5px; 
     transition: 
@@ -67,5 +68,138 @@ html{
 .navbar-brand img{
     width:6%;
     margin-left:-18px;
-    margin-top:13px;
+    margin-top:12px;
 }
+#me{
+    display:block;
+    margin-left:auto;
+    margin-right:auto;
+    width:13%;
+    border-radius: 2000px;
+    margin-top:40px;
+}
+.hello{
+    margin-top:20px;
+    text-align: center;
+    font-size:32px;
+    font-family:'Work Sans', sans-serif;
+}
+.text2{
+    text-align:center;
+    margin-left:310px;
+    margin-right:310px;
+    font-size:19px;
+    font-family:'Work Sans', sans-serif;   
+}
+.text3{
+    text-align:center;
+    margin-left:360px;
+    margin-right:360px;
+    font-size:18px;
+    font-family:'Work Sans', sans-serif;
+    color:#635F5F;
+}
+.text4{
+    text-align:center;
+    margin-left:360px;
+    margin-right:360px;
+    font-size:18px;
+    font-family:'Work Sans', sans-serif;
+    color:#635F5F;
+}
+.text5{
+    text-align:center;
+    margin-left:360px;
+    margin-right:360px;
+    margin-bottom:100px;
+    font-size:18px;
+    font-family:'Work Sans', sans-serif;
+    color:#635F5F;
+    
+}
+/*icons*/
+.icons{
+    text-align: center;
+    padding:30px;
+  }
+  .uil{
+      margin:30px;
+      color:#232323;
+  }
+  .uil:hover{
+      color:#9C9C9C;
+      transition: color 0.2s ease;
+  }
+
+  /*text animation*/
+.hello{
+    -webkit-animation-fill-mode:both;
+    -webkit-animation-duration:2s;
+    animation-duration:2s;
+  }
+  .text2{
+    animation-delay:.5s;
+    -webkit-animation-delay:.5s;
+    -webkit-animation-fill-mode:both;
+    -webkit-animation-duration:2s;
+    animation-duration:2s;
+  }
+  .text3{
+    animation-delay:.7s;
+    -webkit-animation-delay:.7s;
+    -webkit-animation-fill-mode:both;
+    -webkit-animation-duration:2s;
+    animation-duration:2s;
+  }
+  .text4{
+    animation-delay:.7s;
+    -webkit-animation-delay:.7s;
+    -webkit-animation-fill-mode:both;
+    -webkit-animation-duration:2s;
+    animation-duration:2s;
+  }
+  .text5{
+    animation-delay:.7s;
+    -webkit-animation-delay:.7s;
+    -webkit-animation-fill-mode:both;
+    -webkit-animation-duration:2s;
+    animation-duration:2s;
+  }
+  @-webkit-keyframes fadeOutUp {
+      0% {
+          opacity: 0;
+          -webkit-transform: translateY(1);
+      -webkit-transform: translateY(40px);
+      }	100% {
+          opacity: 1;
+      }
+  }
+  
+  .fadeOutUp {
+      -webkit-animation-name: fadeOutUp;
+      animation-name: fadeOutUp;
+  }
+  
+  .fadeIn {
+    -webkit-animation-name: fadeIn;
+      animation-name: fadeIn;
+  }
+  
+  @-webkit-keyframes fadeIn {
+      0%{
+      opacity: 0;
+          -webkit-transform: translateY(1);
+      -webkit-transform: translateY(40px);
+    }
+    100% {
+          opacity: 1;
+      }
+    }
+  
+
+     
+      
+  
+  span{
+    color:#1AD98B;
+  }
