--- a/individual/contact/style.css
+++ b/individual/contact/style.css
@@ -36,6 +36,7 @@ html{
 
 
 }
+/*navbar items styling*/
 .navbar .navbar-nav li a{
     color: #232323;
     text-decoration: none;
@@ -62,26 +63,26 @@ html{
     font-weight: 650;
     font-family:'BIZ UDPGothic', sans-serif;
 }*/
-
+/*logo*/
 .navbar-brand img{
     width:6%;
     margin-left:-18px;
     margin-top:13px;
 }
 
-
+/*form styling*/
 input[type=text], select, textarea {
-    width: 100%; /* Full width */
-    padding: 12px; /* Some padding */ 
-    border: 1px solid #ccc; /* Gray border */
-    border-radius: 4px; /* Rounded borders */
-    box-sizing: border-box; /* Make sure that padding and width stays in place */
-    margin-top: 6px; /* Add a top margin */
-    margin-bottom: 16px; /* Bottom margin */
-    resize: vertical /* Allow the user to vertically resize the textarea (not horizontally) */
+    width: 100%;
+    padding: 12px; 
+    border: 1px solid #ccc; 
+    border-radius: 4px; 
+    box-sizing: border-box; 
+    margin-top: 6px;
+    margin-bottom: 16px; 
+    resize: vertical 
   }
   
-  /* Style the submit button with a specific background color etc */
+  /* submit button styling */
   input[type=submit] {
     background-color: #5156C3;
     color: white;
@@ -93,20 +94,21 @@ input[type=text], select, textarea {
     
   }
   
-  /* When moving the mouse over the submit button, add a darker green color */
+  /*submit button hover*/
   input[type=submit]:hover {
     text-decoration: none;
     background-color: #9C9ECE;
     transition: all .2s ease;
   }
   
-  /* Add a background color and some padding around the form */
+  /* form background */
   .container {
     border-radius: 5px;
     background-color: #f2f2f2;
     padding: 20px;
     margin-bottom:60px;
   }
+  /*text styling*/
   .text1{
       margin-top:50px;
       text-align: center;
