--- a/individual/contact/submit/style.css
+++ b/individual/contact/submit/style.css
@@ -62,12 +62,13 @@ html{
     font-weight: 650;
     font-family:'BIZ UDPGothic', sans-serif;
 }*/
-
+/*logo*/
 .navbar-brand img{
     width:6%;
     margin-left:-18px;
     margin-top:13px;
 }
+/*text styling*/
 .text1{
     text-align:center;
     font-size:32px;
@@ -104,6 +105,7 @@ html{
       transition: all 0.2s ease;
       color:#AC5A93;
   }
+  /*text animation*/
   .text1{
     -webkit-animation-fill-mode:both;
     -webkit-animation-duration:2s;
