--- a/individual/prototype/style.css
+++ b/individual/prototype/style.css
@@ -1,4 +1,6 @@
+
 @import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=Work+Sans:wght@500&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -6,6 +8,7 @@
     text-decoration: none;
 
 }
+/*html styling*/
 html{
     scroll-behavior: smooth;
 }
@@ -41,6 +44,7 @@ html, body {
 
 
 }
+/*nav bar item styling*/
 .navbar .navbar-nav li a{
     color: #ffff;
     text-decoration: none;
@@ -76,6 +80,7 @@ html, body {
     margin-left:-18px;
     margin-top:13px;
 }
+/*background image for home*/
 .home{
     /*display: flex;*/
     background: url("../images/protohome3\ \(3\).jpg") no-repeat center;
@@ -85,6 +90,7 @@ html, body {
     width:100%;*/
 
 }
+/*text styling*/
 .hello{
     color:#ffff;
     font-size:58px;
@@ -101,6 +107,7 @@ html, body {
     margin-top:30px;
     margin-bottom:170px;
 }
+/*text animation*/
 .hello{
     -webkit-animation-fill-mode:both;
     -webkit-animation-duration:2s;
@@ -143,3 +150,67 @@ html, body {
           opacity: 1;
       }
   }
+/*formatting the body*/
+.content{
+    font-family: 'Work Sans', sans-serif;
+    margin-left:250px;
+    margin-right:250px;
+    margin-top:100px;
+    color:#232323;
+}
+.heading{
+    
+    font-weight:00px;
+}
+.description{
+    margin-top:40px;
+    margin-bottom:100px;
+    font-size:18px;
+}
+.question{
+    margin-bottom:100px;
+    text-align:center;
+    font-size:24px;
+    color:#454545;
+    font-weight:500px;
+}
+.bracket{
+font-size:20px;
+}
+#right{
+    margin-left:750px;
+}
+/*formatting images*/
+.column {
+    display: inline-block;
+    margin-left: auto;
+    margin-right: auto; 
+    width:42%;
+    box-shadow: 0px 0px 5px #949494;
+}
+
+.background{
+    text-align:center;
+}
+#person1{
+    margin-right:35px;
+
+}
+#person2{
+    margin-left:35px;
+}
+#wire{
+    display:block;
+    margin:auto;
+    box-shadow: 0px 0px 5px #949494;
+    width:70%;
+    margin-top:50px;
+    margin-bottom:100px;
+}
+#wireframe{
+    display:block;
+    margin:auto;
+    width:70%;
+    box-shadow: 0px 0px 5px #949494;
+    margin-bottom:100px;
+}
