--- a/individual/prototype/style.css
+++ b/individual/prototype/style.css
@@ -94,7 +94,7 @@ html, body {
 .hello{
     color:#ffff;
     font-size:58px;
-    font-weight:600;
+    font-weight:500;
     font-family: 'Work Sans', sans-serif;
     margin-top:180px;
     margin-left:150px;
@@ -186,7 +186,7 @@ font-size:20px;
     margin-left: auto;
     margin-right: auto; 
     width:42%;
-    box-shadow: 0px 0px 5px #949494;
+    box-shadow: 0px 0px 3px #949494;
 }
 
 .background{
@@ -214,3 +214,87 @@ font-size:20px;
     box-shadow: 0px 0px 5px #949494;
     margin-bottom:100px;
 }
+#tests{
+    width:100%;
+    box-shadow: 0px 0px 5px #949494;
+}
+#marvel{
+    text-decoration: none;
+}
+#marvel:hover{
+    color: #96B4FF;
+    transition: color .6s ease;
+
+}
+/*app styling*/
+.back{
+    background:#bddbff;
+}
+.frames{
+    text-align: center;
+    padding-bottom:100px;
+}
+#frame1{
+    border-radius:20px;
+    box-shadow: 0px 0px 10px #232323;
+    width:23%;
+    margin-top:100px;
+    margin-right:10px;
+    margin-left:10px;
+}
+#frame2{
+    border-radius:20px;
+    box-shadow: 0px 0px 10px #232323;
+    width:23%;
+    margin-top:100px;
+    margin-right:10px;
+}
+#frame3{
+    border-radius:20px;
+    box-shadow: 0px 0px 10px #232323;
+    width:23%;
+    margin-top:100px;
+    margin-right:10px;
+}
+#frame4{
+    border-radius:20px;
+    box-shadow: 0px 0px 10px #232323;
+    width:23%;
+    margin-top:100px;
+    margin-right:10px;
+}
+#frame5{
+    border-radius:20px;
+    box-shadow: 0px 0px 8px #232323;
+    width:23%;
+    margin-top:50px;
+    margin-right:10px;
+    margin-left:10px;
+}
+#frame6{
+    border-radius:20px;
+    box-shadow: 0px 0px 8px #232323;
+    width:23%;
+    margin-top:50px;
+    margin-right:10px;
+}
+#frame7{
+    border-radius:20px;
+    box-shadow: 0px 0px 8px #232323;
+    width:23%;
+    margin-top:50px;
+    margin-right:10px;
+}
+/*icons*/
+.icons{
+    text-align: center;
+    padding:30px;
+  }
+  .uil{
+      margin:30px;
+      color:#232323;
+  }
+  .uil:hover{
+      color:#9C9C9C;
+      transition: color 0.2s ease;
+  }
