--- a/individual/photo/style.css
+++ b/individual/photo/style.css
@@ -81,7 +81,7 @@ html, body {
 /*background image for home*/
 .home{
     /*display: flex;*/
-    background: url("../images/photothum6.jpg") no-repeat center;
+    background: url("../images/photohom13.jpg") no-repeat center;
     background-size:cover;
     /*background-size:1280px;
     min-height: 500px;
