--- a/individual/web/web.css
+++ b/individual/web/web.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=Work+Sans&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=BIZ+UDPGothic&family=Work+Sans:wght@500&display=swap');
 *{
     margin: 0;
     padding: 0;
@@ -147,4 +148,74 @@ html, body {
     100% {
           opacity: 1;
       }
+  }
+/*formatting the body*/
+.content{
+    font-family: 'Work Sans', sans-serif;
+    margin-left:250px;
+    margin-right:250px;
+    margin-top:100px;
+    color:#232323;
+}
+.heading{
+    
+    font-weight:00px;
+}
+.description{
+    margin-top:40px;
+    margin-bottom:100px;
+    font-size:18px;
+}
+.java{
+    display:block;
+    margin:auto;
+    width:90%;
+    box-shadow: 0px 0px 5px #949494;
+
+}
+figcaption{
+    text-align: center;
+    font-size:16px;
+    font-family: 'Work Sans', sans-serif;
+    margin-top:20px;
+    margin-bottom:60px;
+}
+.score{
+    display:block;
+    margin:auto;
+    width:90%;
+    box-shadow: 0px 0px 5px #949494;
+
+}
+.counter{
+    display:block;
+    margin:auto;
+    width:90%;
+    box-shadow: 0px 0px 5px #949494;
+}
+.dash{
+    display:block;
+    margin:auto;
+    width:90%;
+    box-shadow: 0px 0px 5px #949494;
+}
+/*icons*/
+.icons{
+    text-align: center;
+    padding:30px;
+  }
+  .uil{
+      margin:30px;
+      color:#232323;
+  }
+  .uil:hover{
+      color:#9C9C9C;
+      transition: color 0.2s ease;
+  }
+  .purple{
+      background-color:#c1a2db;
+      padding:20px;
+  }
+  #white{
+      color:white;
   }
