--- a/individual/photo/photo.css
+++ b/individual/photo/photo.css
@@ -79,30 +79,28 @@ html, body {
     margin-top:13px;
 }
 /*background image for home*/
-.home{
-    /*display: flex;*/
-    background-color:#deaba8;
-    /*background-size:1280px;
-    min-height: 500px;
-    width:100%;*/
 
+.content{
+  margin-left:100px;
+    margin-right:100px;
+    margin-bottom:100px;
 }
 /*text styling*/
-.hello{
-    color:#ffff;
-    font-size:40px;
-    font-weight:600;
+/*.hello{
+    color:#232323;
+    font-size:35px;
+    font-weight:;
     font-family: 'Work Sans', sans-serif;
-    margin-top:10px;
-    text-align:center;
-}
-.text2{
-    color:#ffff;
+    margin-top:5px;
+    margin-left:105px;
+}*/
+.hello{
+    color:#232323;
     font-size:18px;
     font-family: 'Work Sans', sans-serif;
     font-weight:normal;
-    margin-top:100px;
-    margin-bottom:170px;
+    margin-top:80px;
+    margin-bottom:50px;
     text-align:center;
 }
 /*text animation*/
@@ -155,19 +153,15 @@ figure{
   text-align: center;
 }
 .photo{
-  width:30%;
-  border: solid 8px white;
-  box-shadow: 0px 0px 5px #949494;
-  margin:10px;
+  width:28%;
+  
+  margin:5px;
+  margin-bottom:-10px;
 }
 #building, #bubbles, #stairs{
   margin-top:80px;
 }
-.gradient{
-  background-image: linear-gradient(180deg, #deaba8, white);
-  background-repeat: no-repeat;
-  margin-bottom:100px;
-}
+
 /*image fade*/
 .photo {
   animation: fadeIn ease 5s;
